<resources>
    <string name="app_name">Yatrashare</string>
    <string name="uselocation">Use your Location</string>
    <string name="givepermission">Give location access so we can choose the right country for your ride share.</string>
    <string name="allow">Allow</string>
    <string name="skip">Skip</string>
    <string name="yourcountry">Your country</string>
    <string name="api_key">AIzaSyAZxOqokBM3G-2KEyHuUaJMhVV75ZYncEo</string>
    <string name="server_api_key">AIzaSyBHzhxlAtMDm56gRwsJqxGUW20smcBNXJk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pendingBookings">Pending Bookings</string>
    <string name="cancelSeat">Cancel Seat</string>
    <string name="sendSMS">Get Owner Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="rideHeading">Ride: </string>
    <string name="feedbackHeading">Share your experience with yatrashare</string>
    <string name="feedbackEditHint">How was your journey?</string>
    <string name="title">Yatra Share</string>
    <string name="author_name">By K PHANI KUMAR</string>
    <string name="author_url">www.yatrashare.com</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_send">Send</string>
    <string name="or">OR</string>
    <string name="going_smwr">Going Somewhere?</string>
    <string name="share_ride_save_money">Share your ride, save money</string>
    <string name="searchRide">Find a Ride</string>
    <string name="offerRide">Offer a Ride</string>
    <string name="title_activity_login">Sign in</string>
    <string name="aboutMe">About me</string>
    <string name="mandateAboutMe">Tell other members about yourself and why they should want to travel with you</string>
    <string name="retry">Retry</string>
    <string name="ride_type">Ride Type</string>
    <string name="rideTypeHeading">Ride  Type</string>
    <string name="oddeven">Car/Bike Type</string>
    <string name="allRides">All Rides</string>
    <string name="longRide">Long Ride</string>
    <string name="dailyRide">Daily Ride</string>
    <string name="odd">Odd</string>
    <string name="even">Even</string>
    <string name="vehicleTypeHeading">Vehicle Type</string>
    <string name="timeRangeHeading">Time</string>
    <string name="timeRangeSubHeading">Departure Time 1 hr- 24 hrs</string>
    <string name="vehiclecomfortLevelHeading">Vehicle Comfort Level</string>
    <string name="GenderHeading">Gender</string>
    <string name="ladiesOnly">Ladies Only</string>
    <string name="AllGenders">All</string>
    <string name="updatePhoto">Update photo</string>
    <string name="preferences">Preferences</string>
    <string name="chat">Chat</string>
    <string name="music">Music</string>
    <string name="smoke">Smoke</string>
    <string name="pets">Pets</string>
    <string name="food">Food</string>
    <string name="updateProfile">Update Profile</string>
    <string name="dob">Date of birth*</string>
    <string name="profile_updated_rationale">Profile updated successfully</string>
    <string name="mobileNumber">Mobile Number: </string>
    <string name="email">Email: </string>
    <string name="licenceStatus">Licence: </string>
    <string name="prompt_userfirstname">FirstName*</string>
    <string name="prompt_userlastname">Last Name*</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="prompt_username">User Name*</string>
    <string name="prompt_email">Email Id*</string>
    <string name="prompt_userId">Email Id/Mobile*</string>
    <string name="prompt_password">Password*</string>
    <string name="prompt_mobile">Mobile*</string>
    <string name="action_sign_in">Login with email address</string>
    <string name="sign_up_text">Signup</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Not a member yet? Join us</string>
    <string name="forgotPwd">Forgot your password?</string>
    <string name="resetPwd">Reset</string>
    <string name="signup_tag">If you aren’t a member yet and you log in with Facebook, we’ll register you as a new user . You’ll also be agreeing to our Terms &amp; conditions</string>
    <string name="editPrice">Ride price</string>
    <string name="selectVehicle">Select Your Vehicle</string>
    <string name="car">Car</string>
    <string name="byk">Bike</string>
    <string name="provideRidedetails">Provide your ride details here</string>
    <string name="nextstep">Next Step</string>
    <string name="publishRide">Publish Ride</string>
    <string name="color">Color</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="registrationNo">Regd No.</string>
    <string name="seats">Seats</string>
    <string name="comfort">Comfort</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string-array name="luggageSizeType_array">
        <item>Select Luggage size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="selectModel_array">
        <item>Select Model</item>
    </string-array>
    <string-array name="selectSeats_array">
        <item>Select Seats</item>
    </string-array>
    <string-array name="selectCarSeats_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="selectBikeSeats_array">
        <item>Select Seats</item>
        <item>1</item>
    </string-array>
    <string-array name="selectBrand_array">
        <item>Select Brand</item>
    </string-array>
    <string-array name="vehiclecolor_array">
        <item>Black</item>
        <item>Light Green</item>
        <item>Green</item>
        <item>Dark Green</item>
        <item>Light Gray</item>
        <item>Dark Gray</item>
        <item>purple</item>
        <item>Brown</item>
        <item>Claret</item>
        <item>Light Blue</item>
        <item>Blue</item>
        <item>Dark Blue</item>
        <item>Mauve</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Beige</item>
    </string-array>
    <string-array name="timeFlexibileType_array">
        <item>Time Flexibility</item>
        <item>Around 15 mins</item>
        <item>Around 30 mins</item>
        <item>Around 1 hour</item>
        <item>Around 2 hours</item>
    </string-array>
    <string-array name="detourType_array">
        <item>Select detour</item>
        <item>I am not willing to make detour</item>
        <item>15 mins detour Max</item>
        <item>30 mins detour Max</item>
        <item>Any detour</item>
    </string-array>
    <string name="selectvehicleModel">Select Model</string>
    <string name="agreeTerms">I agree Terms and Condtions and I have valid driving Licence.</string>
    <string name="findmember">Find Member</string>
    <string name="registervehicle"><u>Register New Vehicle</u></string>
    <string name="addStopOverPoints"><u>Add Stopover</u></string>
    <string name="add_stopovers">Add stopovers and get more co-travellers</string>
    <string name="departuredate">Departure Date</string>
    <string name="returndate">\tReturn Date\t\t</string>
    <string name="time">Time</string>
    <string name="returnTime">Return Time</string>
    <string name="round_trip">Round trip</string>
    <string name="datentime">Date and Time</string>
    <string name="ride_stopovers">Stopover point</string>
    <string name="ride_where_from">Where from?</string>
    <string name="ride_where_to">Where to?</string>
    <string name="ride_submit">Submit</string>
    <string name="ride_find">Find a Ride</string>
    <string name="ride_date">Date(optional)</string>
    <string name="createEmailAlert">Create an Email Alert</string>
    <string name="provide_rating">Publish</string>
    <string name="old_password">Old Password*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="enter_newPwd_error">Enter new password</string>
    <string name="confirm_pwd_error">Enter confirm password</string>
    <string name="pwd_do_not_match">Passowords does not match</string>
    <string name="changedPwd">Passwords changed successfully</string>
    <string name="mobileUpdated">Mobile number successfully Verified.</string>
    <string name="mobileSaved">Mobile number successfully Saved.</string>
    <string name="uploadLicenceInfo">Provide the driver\'s licence. Upload two sides of Licence, otherwise we wont accept it. \nWe promise you, we will not share your licence with others.
	\nWe will manually checks each licence. Please upload clearly visible pictures only.</string>
    <string name="imagesInfo"><b>Licence Images: </b>You have to upload two side of licence</string>
    <string name="upload">Upload</string>
    <string name="remove">Remove</string>
    <string name="seatsDialogHeading">How many Seats?</string>
    <string name="seatsDialogsubTitle">No. Of Seats</string>
    <string name="error_invalid_email">Email Id is invalid</string>
    <string name="error_invalid_user">UserId is invalid</string>
    <string name="error_invalid_username">First Name is required</string>
    <string name="error_invalid_lastname">Last Name is required</string>
    <string name="error_invalid_phone">Invalid Phone number</string>
    <string name="error_required_phone">Phone number is required</string>
    <string name="error_required_aboutme">Tell us about yourself</string>
    <string name="error_invalid_aboutme">About yourself should be minimum of 50 characters</string>
    <string name="error_required_password">password is required</string>
    <string name="error_invalid_password">password is too short</string>
    <string name="error_invalid_login">Email or password entered is incorrect</string>
    <string name="tryagain">Something went wrong. please try again!</string>
    <string name="userid_field_required">Email/Mobile is required</string>
    <string name="error_field_required">Email is required</string>
    <string name="success_login">Login Successfully</string>
    <string name="success_signup">Signup Successful</string>
    <string name="resetpwd_ratioanle">An Email is sent to registered Mail, to reset Password.</string>
    <string name="emailalertCreated_rationale">We will send an email, Once the ride is available.</string>
    <string name="userguide_ratioanle">There is a problem with login. Please Logout and Login Again.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="location_permission_rationale">"Location permissions are needed to access the App."</string>
    <string name="storage_permission_rationale">"Storage permissions are needed for uploading Images."</string>
    <string name="call_permission_rationale">"Call permissions are needed to place a call."</string>
    <string name="login_rationale">Log in or Sign up</string>
    <string name="terms_and_conditions_rationale">You\'ll be agreeing to our Terms and Conditions.</string>
    <string name="password_rationale">Your password must contain a combination of letters and numbers.</string>
    <string name="add_user_rationale">Add a nice picture to your profile. Users with pictures get more rides!</string>
</resources>