<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBG"
    android:orientation="vertical">

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:padding="8dp"
        android:text="@string/rideTypeHeading"
        android:textColor="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/rg_rideType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/rbtn_longRide"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/longRide" />

        <RadioButton
            android:id="@+id/rbtn_dailyRide"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dailyRide"
            android:textIsSelectable="true" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF" />

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:padding="8dp"
        android:text="@string/vehicleTypeHeading"
        android:textColor="@color/colorPrimary" />

    <Spinner
        android:id="@+id/sp_vehicleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:entries="@array/vehicleType_array"
        android:padding="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF" />

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:padding="8dp"
        android:text="@string/vehiclecomfortLevelHeading"
        android:textColor="@color/colorPrimary" />

    <Spinner
        android:id="@+id/sp_vehicleComforType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:entries="@array/comfortType_array"
        android:padding="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF" />

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:padding="8dp"
        android:text="@string/GenderHeading"
        android:textColor="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/rg_genderType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/rbtn_ladiesOnly"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/ladiesOnly" />

        <RadioButton
            android:id="@+id/rbtn_All"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/AllGenders"
            android:textIsSelectable="true" />
    </RadioGroup>

</LinearLayout>