<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road_1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/going_smwr"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/share_ride_save_money"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/btnsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/searchRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/search_button_bg"
            android:text="@string/searchRide"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/offerRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/offerride_button_bg"
            android:text="@string/offerRide"
            android:textColor="#0FAAF0"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>